--- a/src/app/card/card.component.scss
+++ b/src/app/card/card.component.scss
@@ -1,11 +1,68 @@
 .card {
   margin: 10px 20px;
-  padding: 10px;
   background-color: aqua;
+  // drop shadow
+  box-shadow: 0px 0px 5px 0px rgba(189, 189, 189, 0.75);
+  .info-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    // border: 1px solid green;
+    height: 100%;  
+    margin: 0 10px;
+    
+    .row {
+      display: flex;
+      border: 1px solid blue;
+      justify-content: space-between;
+      align-items: center;
+      // background-color: red;
+    }
+
+    .tray {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      border: 1px solid sienna;
+      margin: 10px;
+    }
+  }
 }
 
 .pic {
   width: 100%;
   height: 100%;
   // border: 1px solid red;
+}
+
+.header {
+  display: flex;
+  flex-direction: row;
+
+  // border: 1px solid red;
+  padding: 7px 10px;
+  
+  justify-content: space-between;
+  align-items: center;
+  
+  .verticalStack {
+    display: flex;
+    flex-direction: column;
+    border: 1px solid gold;
+
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+.tray {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  // border: 1px solid red;
+}
+
+p {
+  margin: 0;
+  padding: 0;
 }
