--- a/src/app/card/card.component.scss
+++ b/src/app/card/card.component.scss
@@ -1,8 +1,9 @@
 .card {
   margin: 10px 20px;
-  background-color: aqua;
+  // background-color: aqua;
   // drop shadow
   box-shadow: 0px 0px 5px 0px rgba(189, 189, 189, 0.75);
+
   .info-wrapper {
     display: flex;
     flex-direction: column;
