--- a/src/app/filter-section/filter-section.component.scss
+++ b/src/app/filter-section/filter-section.component.scss
@@ -1,11 +1,42 @@
+h3,
+p {
+  margin: 0;
+  padding: 0;
+}
 
 .col {
   display: flex;
   flex-direction: column;
   border: 1px solid red;
+  justify-content: center;
+  // align-items: center;
+  margin: 10px 20px;
+  background-color: rgb(6, 159, 159);
+  // drop shadow
+  box-shadow: 0px 0px 5px 0px rgba(189, 189, 189, 0.75);
+  
 }
 
 .row {
   display: flex;
-  border: 1px solid blue($color: #000000);
+  border: 1px solid blue;
+  padding: 10px 0;
+  .icon-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 5px;
+    
+  }
+}
+
+.item-block {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid green;
+  justify-content: center;
+  margin: 0 10px 0 0;
+
+  input {
+    height: 100%;
+  }
 }
