--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
-<!-- style="background-color: #8a8a8a98;" -->
-<div>
+<div class="main">
   <app-filter-section></app-filter-section>
   <div class="grid">
       <app-card *ngFor="let plan of filteredPlans" [plan]="plan"></app-card>
