--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -10,27 +10,27 @@
   </div>
   <img src="{{plan.image}}" alt="plan image" class="pic">
   <div class="info-wrapper">
-    <div class="row">
+    <div class="row underline">
       <p>Total Distance:</p>
       <p>{{plan.totalDistance}}</p>
     </div>
-    <div class="row">
+    <div class="row underline">
       <p>Number of Tracks:</p>
       <p>{{plan.numberOfTracks}}</p>
     </div>
-    <div class="row">
+    <div class="row underline">
       <p>Headings: </p>
       <p>{{plan.headings}}</p>
     </div>
-    <div class="row">
+    <div class="row underline">
       <p>Swath Width: </p>
       <p>{{plan.swathWidth}}</p>
     </div>
-    <div class="row">
+    <div class="row underline">
       <p>Grower: </p>
       <p>{{plan.grower}}</p>
     </div>
-    <div class="row">
+    <div class="row underline">
       <p>Farm:</p>
       <p> {{plan.farm}}</p>
     </div>
