--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,17 +1,20 @@
+.main {
+  height: 100vh;
+  padding: 0;
+  margin: 0;
+}
+
 .grid {
   display: grid;
   width: 100%;
-  // background-color: red;
   grid-template-columns: repeat(5, 1fr);
 }
 
 .col {
   display: flex;
   flex-direction: column;
-  border: 1px solid red;
 }
 
 .row {
   display: flex;
-  border: 1px solid blue($color: #000000);
 }
