--- a/src/app/card/card.component.scss
+++ b/src/app/card/card.component.scss
@@ -1,30 +1,27 @@
 .card {
   margin: 10px 20px;
-  // background-color: aqua;
-  // drop shadow
+  background-color: rgb(204, 213, 213);
   box-shadow: 0px 0px 5px 0px rgba(189, 189, 189, 0.75);
 
   .info-wrapper {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    // border: 1px solid green;
     height: 100%;  
     margin: 0 10px;
     
     .row {
       display: flex;
-      border: 1px solid blue;
+      margin: 5px 0;
+
       justify-content: space-between;
       align-items: center;
-      // background-color: red;
     }
 
     .tray {
       display: flex;
       flex-direction: row;
       justify-content: space-between;
-      border: 1px solid sienna;
       margin: 10px;
     }
   }
@@ -33,34 +30,32 @@
 .pic {
   width: 100%;
   height: 100%;
-  // border: 1px solid red;
 }
 
 .header {
   display: flex;
   flex-direction: row;
-
-  // border: 1px solid red;
   padding: 7px 10px;
-  
   justify-content: space-between;
   align-items: center;
   
   .verticalStack {
     display: flex;
     flex-direction: column;
-    border: 1px solid gold;
 
     justify-content: center;
     align-items: center;
   }
 }
 
+.underline {
+  border-bottom: 1px solid rgb(248, 248, 248);
+}
+
 .tray {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  // border: 1px solid red;
 }
 
 p {
