--- a/src/app/filter-section/filter-section.component.html
+++ b/src/app/filter-section/filter-section.component.html
@@ -14,7 +14,7 @@
       <button class="styled-button" (click)="onResetFilter()">Reset</button>
     </div>
     <div>
-      <input placeholder="Text Search" (keyup)="setTextSearch()" [(ngModel)]="textSearch">
+      <input placeholder="Text Search" class="styled-input" (keyup)="setTextSearch()" [(ngModel)]="textSearch">
     </div>
   </div>
 </div>
