--- a/src/app/filter-section/filter-section.component.scss
+++ b/src/app/filter-section/filter-section.component.scss
@@ -81,3 +81,17 @@ p {
 .styled-button:hover {
   background-color: #45a049;
 }
+
+.styled-input {
+  padding: 10px; /* Add padding to the input */
+  border: 1px solid lightgrey; /* Add a border */
+  border-radius: 4px; /* Add rounded corners */
+  font-size: 16px; /* Set the font size */
+}
+
+/* Add hover and focus styles */
+.styled-input:hover,
+.styled-input:focus {
+  border-color: #4CAF50; /* Change the border color on hover and focus */
+  outline: none; /* Remove the default focus outline */
+}
